# AutoProcess

./: LICENSE  README.md  Report  pyproject.toml  setup.py
generate/src/autoprocess/: __init__.py  cleaning.py  feature_eng.py  helper.py  transforming.py  unskew.py
