[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoprocess"
version = "0.1.0"
authors = [
  { name="Shubham", email="shubhamsinghalswm123@gmail.com" },
]
description = "Automated data preprocessing library using Google's Gemini AI"
readme = "README.md"
requires-python = ">=3.7"
license = {file= "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.18.0",
    "pandas>=1.0.0",
    "scikit-learn>=0.24.0",
    # Add other dependencies here
]

[project.urls]
"Homepage" = "https://github.com/ShubhamS1101/CleanGPT01"

[tool.hatch.build.targets.wheel]
packages = ["src/autoprocess"]
